--- a/social_media.ipynb
+++ b/social_media.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Paul Sentongo\n",
+    "Ogwok Kenneth\n",
+    "Marvin \n",
+    "Comfort Agaba"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 82,
    "metadata": {},
