--- a/social_media.ipynb
+++ b/social_media.ipynb
@@ -668,7 +668,7 @@
     "Q3 = r3_cleaned[continuous_vars].quantile(0.75)\n",
     "IQR = Q3 - Q1\n",
     "outliers_iqr = ((r3_cleaned[continuous_vars] < (Q1 - 1.5 * IQR)) | (r3_cleaned[continuous_vars] > (Q3 + 1.5 * IQR))).any(axis=1)\n",
-    "r3_cleaned[continuous_vars] = r3_cleaned[continuous_vars].apply(lambda x: winsorize(x, limits=[0.05, 0.05]))\n"
+    "r3_cleaned[continuous_vars] = r3_cleaned[continuous_vars].apply(lambda x: winsorize(x, limits=[0.05, 0.05]))"
    ]
   },
   {
